--- a/components/range.css
+++ b/components/range.css
@@ -1,3 +1,9 @@
+.range-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .range-slider {
   position: relative;
   width: 300px;
@@ -29,4 +35,9 @@
   width: 25px;
   height: 25px;
   transform: translateY(-50%) scale(1.2);
+}
+
+.label {
+  display: flex;
+  flex-direction: row;
 }
