--- a/components/range.css
+++ b/components/range.css
@@ -39,5 +39,17 @@
 
 .label {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  gap: 2px;
+}
+
+.label--left {
+  margin-right: 4px;
+}
+
+.label-data {
+  width: 30px;
+  height: 35px;
+  border: 0;
+  text-align: right;
 }
