--- a/components/Range/range.css
+++ b/components/Range/range.css
@@ -8,7 +8,7 @@
   position: relative;
   width: 300px;
   height: 6px;
-  background-color: #ddd;
+  background-color: black;
   border-radius: 4px;
 }
 
@@ -21,14 +21,7 @@
   border-radius: 50%;
   transform: translateY(-50%);
   cursor: pointer;
-}
-
-.thumb-min {
-  left: 0;
-}
-
-.thumb-max {
-  right: 0;
+  border: 2px solid rgb(176, 176, 176);
 }
 
 .thumb:hover {
@@ -44,7 +37,11 @@
 }
 
 .label--left {
-  margin-right: 4px;
+  padding-right: 16px;
+}
+
+.label--right {
+  padding-left: 8px;
 }
 
 .label-data {
