--- a/components/Range/range.css
+++ b/components/Range/range.css
@@ -30,6 +30,10 @@
   transform: translateY(-50%) scale(1.2);
 }
 
+.thumb:active {
+  cursor: grabbing;
+}
+
 .label {
   display: flex;
   align-items: center;
