--- a/app/app.css
+++ b/app/app.css
@@ -13,6 +13,11 @@
   justify-content: center;
 }
 
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
 .button {
   text-decoration: none;
   color: white;
