--- a/components/Range/range.css
+++ b/components/Range/range.css
@@ -10,6 +10,9 @@
   height: 6px;
   background-color: black;
   border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .thumb {
@@ -53,4 +56,11 @@
   height: 35px;
   border: 0;
   text-align: right;
+}
+
+.dot {
+  background-color: rgb(190, 184, 184);
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
 }
